unpackaged/main/default/objects/Contract_Line_Item__c/Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line items associated to a contract.</description>
    <label>Contract Line Item</label>
    <nameField>
        <label>Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>