unpackaged/main/default/objects/Contract_Line_Item__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 2 appover of the contract</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Line_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>