unpackaged/main/default/objects/Contract_Line_Item__c/fields/Approver_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Approver_Action_Date__c</fullName>
    <description>Date approver took the action.</description>
    <label>Approver Action Date</label>
    <type>DateTime</type>
</CustomField>