unpackaged/main/default/objects/Contract_Line_Item__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Comments by approver.</description>
    <label>Approver Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>