unpackaged/main/default/objects/Contract_Line_Item__c/fields/Auto_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Date__c</fullName>
    <description>Date Created + Contract Line Item Auto Approval Buffer (Custom metadata)</description>
    <formula>IF(
    AND(
         Auto_Approval_Eligibility__c = TRUE,
        NOT(
            AND(
                TEXT(Line_Status__c) = &#39;A2&#39;,
                TEXT(Line_Type__c) = &#39;Amendment&#39;,
                OR(
                    TEXT(Amendment_Type__c) = &#39;U&#39;,
                    TEXT(Amendment_Type__c) = &#39;D&#39;
                )
            )
        )
    ),
    DATE(YEAR(DATEVALUE(CreatedDate)), MONTH(DATEVALUE(CreatedDate)), DAY(DATEVALUE(CreatedDate))) + $CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Contract_Line_Item_Auto_Approval_Buffer__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date Created + Contract Line Item Auto Approval Buffer (Custom metadata)</inlineHelpText>
    <label>Auto Approval Date</label>
    <type>Date</type>
</CustomField>