unpackaged/main/default/objects/Contract_Line_Item__c/fields/Auto_Approval_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the line item qualifies for automatic approval.</description>
    <label>Auto Approval Eligibility</label>
    <type>Checkbox</type>
</CustomField>