unpackaged/main/default/objects/Contract_Line_Item__c/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a line item has been automatically approved.</description>
    <label>Auto Approved</label>
    <type>Checkbox</type>
</CustomField>