unpackaged/main/default/objects/Contract_Line_Item__c/fields/Auto_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved_Date__c</fullName>
    <description>The date on which the line item has been auto approved.</description>
    <label>Auto Approved Date</label>
    <type>Date</type>
</CustomField>