unpackaged/main/default/objects/Contract_Line_Item__c/fields/Contract_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Will hold contract line number (to be used as the external identifier)</description>
    <externalId>true</externalId>
    <label>Contract Item ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>