unpackaged/main/default/objects/Contract_Line_Item__c/fields/Cost_CZ1__c.field-meta.xml
<CustomField>
    <fullName>Cost_CZ1__c</fullName>
    <description>Cost for CZ1</description>
    <label>CZ1 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>