unpackaged/main/default/objects/Contract_Line_Item__c/fields/Cost_CZ2__c.field-meta.xml
<CustomField>
    <fullName>Cost_CZ2__c</fullName>
    <description>Cost for CZ2</description>
    <label>CZ2 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>