unpackaged/main/default/objects/Contract_Line_Item__c/fields/Cost_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Cost_CZ3__c</fullName>
    <description>Cost for CZ3</description>
    <label>CZ3 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>