unpackaged/main/default/objects/Contract_Line_Item__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discard the contract line item or not.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>