unpackaged/main/default/objects/Contract_Line_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the contract line item.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>