unpackaged/main/default/objects/Contract_Line_Item__c/fields/Item_Class__c.field-meta.xml
<CustomField>
    <fullName>Item_Class__c</fullName>
    <description>Bunnings product family tree class</description>
    <label>Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>