unpackaged/main/default/objects/Contract_Line_Item__c/fields/Item_Department__c.field-meta.xml
<CustomField>
    <fullName>Item_Department__c</fullName>
    <description>Bunnings product family tree department e.g. 300 Paint</description>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>