unpackaged/main/default/objects/Contract_Line_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Line item&#39;s description</description>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>