unpackaged/main/default/objects/Contract_Line_Item__c/fields/Item_Sub_Department__c.field-meta.xml
<CustomField>
    <fullName>Item_Sub_Department__c</fullName>
    <description>Bunnings product family tree sub-department e.g. 400 Exterior Paint</description>
    <label>Sub Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>