unpackaged/main/default/objects/Contract_Line_Item__c/fields/Item_Subclass__c.field-meta.xml
<CustomField>
    <fullName>Item_Subclass__c</fullName>
    <description>Bunnings product family tree subclass</description>
    <label>Subclass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>