unpackaged/main/default/objects/Contract_Line_Item__c/fields/Margin_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Margin_CZ3__c</fullName>
    <description>Approved/Proposed margin percentatge - CZ3</description>
    <label>CZ3 Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>