unpackaged/main/default/objects/Contract_Line_Item__c/fields/Margin_Spec_Buy_CZ1__c.field-meta.xml
<CustomField>
    <fullName>Margin_Spec_Buy_CZ1__c</fullName>
    <description>Approved/Proposed special buy margin - CZ1</description>
    <label>CZ1 Special Buy Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>