unpackaged/main/default/objects/Contract_Line_Item__c/fields/Margin_Spec_Buy_CZ2__c.field-meta.xml
<CustomField>
    <fullName>Margin_Spec_Buy_CZ2__c</fullName>
    <description>Approved/Proposed special buy margin - CZ2</description>
    <label>CZ2 Special Buy Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>