unpackaged/main/default/objects/Contract_Line_Item__c/fields/Original_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Start_Date__c</fullName>
    <description>The original start date of the contract. Populated on create based on the Start_Date__c field.</description>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>