unpackaged/main/default/objects/Contract_Line_Item__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who is the owner of the record.</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>