unpackaged/main/default/objects/Contract_Line_Item__c/fields/Previous_COGS_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Previous_COGS_CZ3__c</fullName>
    <description>Previous COGS excluding GST for a cost zone.</description>
    <label>Previous COGS Ex GST CZ3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>