unpackaged/main/default/objects/Contract_Line_Item__c/fields/Previous_Cost_CZ2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Cost_CZ2__c</fullName>
    <description>Proposed cost zone cost.</description>
    <label>Previous CZ2 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>