unpackaged/main/default/objects/Contract_Line_Item__c/fields/Previous_Margin_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Previous_Margin_CZ3__c</fullName>
    <description>Margin percentage on the previous contract (renewals); or current contract (amendments) Margin  - CZ3</description>
    <label>Previous CZ3 Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>