unpackaged/main/default/objects/Contract_Line_Item__c/fields/Previous_Price_CZ1__c.field-meta.xml
<CustomField>
    <fullName>Previous_Price_CZ1__c</fullName>
    <description>Sell price excluding GST on the previous contract for renewals; Current sell price on the contract during amendments - CZ1</description>
    <label>Previous CZ1 Sell (Ex-GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>