unpackaged/main/default/objects/Contract_Line_Item__c/fields/Previous_Sales_CZ2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales_CZ2__c</fullName>
    <description>Previous sales for a cost zone.</description>
    <label>Previous Sales Ex GST CZ2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>