unpackaged/main/default/objects/Contract_Line_Item__c/fields/Previous_Sales_Qty_CZ1__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales_Qty_CZ1__c</fullName>
    <description>Previous sales quantity for a cost zone.</description>
    <label>Previous Sales Quantity CZ1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>