unpackaged/main/default/objects/Contract_Line_Item__c/fields/Price_CZ1__c.field-meta.xml
<CustomField>
    <fullName>Price_CZ1__c</fullName>
    <description>Approved/Proposed sell price excluding GST - CZ1</description>
    <label>CZ1 Sell (Ex-GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>