unpackaged/main/default/objects/Contract_Line_Item__c/fields/Price_CZ2__c.field-meta.xml
<CustomField>
    <fullName>Price_CZ2__c</fullName>
    <description>Approved/Proposed sell price excluding GST - CZ2</description>
    <label>CZ2 Sell (Ex-GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>