unpackaged/main/default/objects/Contract_Line_Item__c/fields/R12_Sales__c.field-meta.xml
<CustomField>
    <fullName>R12_Sales__c</fullName>
    <description>Total sales recorded for 12 months on the item.</description>
    <label>R12 Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>