unpackaged/main/default/objects/Contract_Line_Item__c/fields/Retail_Margin_CZ1__c.field-meta.xml
<CustomField>
    <fullName>Retail_Margin_CZ1__c</fullName>
    <description>Retail margin for CZ1</description>
    <label>CZ1 Retail Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>