unpackaged/main/default/objects/Contract_Line_Item__c/fields/Retail_Margin_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Retail_Margin_CZ3__c</fullName>
    <description>Retail margin for CZ3</description>
    <label>CZ3 Retail Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>