unpackaged/main/default/objects/Contract_Line_Item__c/fields/Retail_Price_CZ2__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price_CZ2__c</fullName>
    <description>Retail sell excluding GST for CZ2 (including markdown). Uses highest price if multiple states.</description>
    <label>CZ2 Retail Sell (Ex-GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>