unpackaged/main/default/objects/Contract_Line_Item__c/fields/Retail_Price_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price_CZ3__c</fullName>
    <description>Retail sell excluding GST for CZ3 (including markdown). Uses highest price if multiple states.</description>
    <label>CZ3 Retail Sell (Ex-GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>