unpackaged/main/default/objects/Contract_Line_Item__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 1 approver of the contract</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Line_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>