unpackaged/main/default/objects/Contract_Line_Item__c/fields/Reviewer_Action__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Action__c</fullName>
    <description>Approved / Rejected by reviewer.</description>
    <label>Reviewer Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>