unpackaged/main/default/objects/Contract_Line_Item__c/fields/Reviewer_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Action_Date__c</fullName>
    <description>Date reviewer took the action.</description>
    <label>Reviewer Action Date</label>
    <type>DateTime</type>
</CustomField>