unpackaged/main/default/objects/Contract_Line_Item__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <description>Comments by reviewer.</description>
    <label>Reviewer Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>