unpackaged/main/default/objects/Contract_Line_Item__c/fields/Sell_Movement_CZ3__c.field-meta.xml
<CustomField>
    <fullName>Sell_Movement_CZ3__c</fullName>
    <description>Sell Movement $ for CZ3</description>
    <label>CZ3 Sell Movement $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>