unpackaged/main/default/objects/Contract_Line_Item__c/fields/Special_Buy_Item__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Special Buy Item</description>
    <label>Special Buy Item</label>
    <referenceTo>Special_Buy_Line_Item__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>