unpackaged/main/default/objects/Contract_Line_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the contract line item.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>