unpackaged/main/default/objects/Contract_Line_Item__c/fields/Upload_Reason__c.field-meta.xml
<CustomField>
    <fullName>Upload_Reason__c</fullName>
    <description>Reason for uploading the file.</description>
    <label>Upload Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>