unpackaged/main/default/objects/Contract_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Class__c</columns>
    <columns>Line_Status__c</columns>
    <columns>Line_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Special_Buy_Item__c</columns>
    <columns>Enabled__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>